Fix .github documentation issues and replace kvshvl.in with kushalsamant.github.io
- Fixed incorrect .workflows directory paths in technical.md and setup.md
- Updated legal document line counts to accurate values (839, 913, 612)
- Corrected filename references from cancellationandrefundpolicy to cancellationrefund
- Replaced all instances of kvshvl.in with kushalsamant.github.io (except CNAME)
- Updated document statistics tables with corrected totals

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,3 +6,22 @@
 
 // Import the dark portfolio theme
 @import "portfolio-dark-theme";
+
+// Links page specific styles
+.links-page {
+  a img {
+    height: 1.2em !important;
+    width: auto;
+    vertical-align: middle;
+    margin-right: 0.5rem;
+  }
+  
+  ul {
+    list-style: none;
+    padding-left: 0;
+  }
+  
+  li {
+    margin-bottom: 1rem;
+  }
+}
