--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) begins -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N2JNEJSXMD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-N2JNEJSXMD');
+</script>
+<!-- Google tag (gtag.js) ends -->  
   <meta charset="UTF-8" />
   <title>{{ page.title }}</title>
   <meta name="description" content="{{ page.description }}">
